# tywaves-rs

./: Cargo.toml  README.md  trace.json  trace.vcd
enum/: enum.dd  trace.vcd
examples/: foo-trace-manual.json  foo-trace-manual.vcd  trace_bar.json  trace_bar.vcd
src/: lib.rs  symbol_table.rs  tywaves_state.rs  variable_finder.rs  vcd_rewrite.rs
src/hgldd/: mod.rs  reader.rs  spec.rs
src/tyvcd/: builder.rs  mod.rs  spec.rs  trace_pointer.rs
tests/: hgldd.rs  symbol_table.rs  tyvcd.rs  tywave_state.rs  tywaves_state.rs  vcd_rewrite.rs
tests/expected_tyvcd/: bar.rs  foo.rs  mod.rs  vec_multi_dim_test.rs  vec_test.rs  with_bundles_and_vecs.rs
tests/inputs/: 3_hgldds_in_single_file.dd  gcd.dd
tests/inputs/hgldd/: bar.dd  enum.dd  foo.dd  foo_with_comments.dd  global.dd  global_with_source_lang_types.dd
tests/inputs/tyvcd/: vecMultiDimTest.dd  vecTest.dd  withBundlesAndVecs.dd
tests/inputs/tyvcd/foo/: bar.dd  foo.dd
