[package]
name = "tywaves-rs"
version = "0.1.1"
edition = "2021"
authors = ["Raffaele Meloni <raffaele.meloni99@gmail.com>"]
description = "Library for reading and elaborating typed waveform files in Rust."
homepage = "https://github.com/rameloni/tywaves-rs"
license = "Apache-2.0"
include = ["Cargo.toml", "src/"]
keywords = [
    "vcd",
    "waveform",
    "hgldd",
    "tywaves",
    "types",
    "chisel",
    "circt",
    "firtool",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.113"
serde_with = "3.8.1"
serde_stacker = "0.1"
eyre = "0.6.12"
vcd = "0.7.0"

[dev-dependencies]
assert-json-diff = "2.0.2"
test-case = "3.3.1"
pretty_assertions = "1.4.0"
